# eventflow

./: .gitignore  README.md  backenddeepdive.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  chat.md  check_emails.py  error_log.txt  full_test.py  generate_frontend_links.py  pyproject.toml  reset_db.py  setup_demo.py  start.sh  test.py  test_500.py  test_email_direct.py  test_etl_interactive.py  test_frontend.py  test_import.csv  test_logs.txt  test_logs_ascii.txt  test_phase5.py  test_phase6.py  test_phase8.py
alembic/: env.py
alembic/versions/: 37f7411a48fa_merge_heads.py  572539d3e7b4_add_waitlist_table.py  57dc9eaf4492_add_bookings_table.py  661a5e92feda_add_notification_logs_table.py  6c806369a2fc_add_wallets_and_wallet_transactions_.py  7c452c5db37e_add_row_level_security_policies.py  9fc702740ad7_add_guests_table.py  a1b2c3d4e5f6_add_microsite_extra_fields.py  a24b6fe0e8b6_add_channel_to_notification_logs.py  d23d3a109c33_add_microsite_tables.py  e3717630f2ce_initial_schema_tenants_users_events_.py  f2493329a299_add_room_blocks_tables.py
app/: __init__.py  celery_app.py  config.py  main.py  openapi.json  worker.py
app/core/: redis.py
app/db/: base.py  seed.py  session.py
app/middleware/: auth.py  tenant.py
app/models/: __init__.py  booking.py  event.py  guest.py  microsite.py  notification.py  room_block.py  room_block_allotment.py  tenant.py  user.py  venue.py  waitlist.py  wallet.py
app/schemas/: __init__.py  analytics.py  auth.py  booking.py  event.py  guest.py  microsite.py  room_block.py  (+4 more)
frontenddesignidea/: DESIGN.md
(+46 files in other folders)
